SERVER-23435 Sharded count command should fail at invalid collection name